[gd_scene load_steps=5 format=3 uid="uid://dybwedbf1ha37"]

[ext_resource type="Script" path="res://ui/title/login/login.gd" id="1_lf5x8"]
[ext_resource type="Texture2D" uid="uid://dul4jv84qltvu" path="res://assets/backgrounds/plains.png" id="2_cq3oh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_po8cb"]
bg_color = Color(0.717647, 0.717647, 0.717647, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.717647, 0.717647, 0.717647, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.258824)
shadow_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_wtmuv"]
font_size = 24

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lf5x8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cq3oh")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.495
anchor_right = 0.5
anchor_bottom = 0.495
offset_left = -136.0
offset_top = -104.76
offset_right = 136.0
offset_bottom = 105.24
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_po8cb")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Login"
label_settings = SubResource("LabelSettings_wtmuv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Choose" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="LoginButton" type="Button" parent="PanelContainer/VBoxContainer/Choose"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 1
anchors_preset = -1
anchor_top = -0.062
anchor_right = 0.531
anchor_bottom = 1.0
offset_top = 1.984
offset_right = -15.936
grow_horizontal = 2
grow_vertical = 2
text = "Login"

[node name="RegisterButton" type="Button" parent="PanelContainer/VBoxContainer/Choose"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "Register"

[node name="LoginForm" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 112)
layout_mode = 2
theme_override_constants/separation = 8

[node name="Username" type="LineEdit" parent="PanelContainer/VBoxContainer/LoginForm"]
layout_mode = 2
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="PanelContainer/VBoxContainer/LoginForm"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="Submit" type="Button" parent="PanelContainer/VBoxContainer/LoginForm"]
layout_mode = 2
text = "Submit"

[node name="RegisterForm" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(256, 112)
layout_mode = 2
theme_override_constants/separation = 8

[node name="Username" type="LineEdit" parent="PanelContainer/VBoxContainer/RegisterForm"]
layout_mode = 2
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="PanelContainer/VBoxContainer/RegisterForm"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="RetypePassword" type="LineEdit" parent="PanelContainer/VBoxContainer/RegisterForm"]
layout_mode = 2
placeholder_text = "Re-type Password"
secret = true

[node name="Submit" type="Button" parent="PanelContainer/VBoxContainer/RegisterForm"]
layout_mode = 2
text = "Submit"
